[package]
name = "generust-example-project"
version = "0.0.1"
authors = ["Kyle Unverferth <kyle@kyleu.com>"]
edition = "2018"
description = "A planning poker app, mostly developed to learn Rust"
readme = "README.md"
categories = ["development-tools", "web-programming", "web-programming::http-server"]
keywords = ["generust-example-project"]
homepage = "https://generust-example-project.com"
repository = "https://github.com/generust-example-project/generust-example-project"
license = "MIT"
exclude = [".gitignore", ".travis.yml", "appveyor.yml"]
build = "build.rs"

[workspace]
members = [
  "crates/assets",
  "crates/client",
  "crates/core",
  "crates/controllers",
  "crates/templates"
]

[lib]
crate-type = ["dylib", "staticlib", "rlib"]
name = "generust_example_project"
path = "src/lib.rs"

[[bin]]
name = "generust_example_project"
path = "src/main.rs"

[dependencies]
actix-http = "0.2.11"
actix-rt = "0.2.6"
actix-server = "0.7.0"
actix-service = "0.4.2"
actix-session = "0.2.0"
actix-utils = "0.4.7"
actix-web = "1.0.9"
actix-web-codegen = "0.1.3"
anyhow = "1.0.25"
app_dirs2 = "2.0.4"
arrayvec = "0.5.1"
bincode = "1.2.1"
bitflags = "1.2.1"
clap = "2.33.0"
generust-example-project-controllers = { version = "0.0.1", path = "crates/controllers" }
generust-example-project-core = { version = "0.0.1", path = "crates/core" }
generust-example-project-service = { version = "0.0.1", path = "crates/service" }
generust-example-project-templates = { version = "0.0.1", path = "crates/templates" }
failure = "0.1.6"
flate2 = "1.0.13"
futures = "0.1.29"
http = "0.2.0"
iovec = "0.1.4"
libc = "0.2.66"
nodrop = "0.1.14"
ryu = "1.0.2"
serde_json = "1.0.44"
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_trace"] }
slog-async = "2.3.0"
slog-json = "2.3.0"
slog-term = "2.4.2"
tokio-reactor = "0.1.11"
tokio-sync = "0.1.7"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
web-view = { version = "0.5.4" }

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.14.0", default-features = false }

[build-dependencies]
winres = "0.1"

[profile.release]
lto = true

[badges]
appveyor = { repository = "generust-example-project/generust-example-project" }
is-it-maintained-issue-resolution = { repository = "generust-example-project/generust-example-project" }
is-it-maintained-open-issues = { repository = "generust-example-project/generust-example-project" }
maintenance = { status = "actively-developed" }
travis-ci = { repository = "generust-example-project/generust-example-project" }

[package.metadata.rpm]
buildflags = ["--release"]

[package.metadata.rpm.targets]
generust-example-project = { path = "/usr/bin/generust-example-project" }
