[package]
name = "generust-example-project-assets"
version = "0.0.1"
authors = ["Kyle Unverferth <kyle@kyleu.com>"]
edition = "2018"
description = "Embedded web assets for generust-example-project"
homepage = "https://estimate.poker"
repository = "https://github.com/generust-example-project/generust-example-project"
license = "MIT"

[dependencies]
rust-embed = { version = "5.1.0", features = ["interpolate-folder-path"] }
