[package]
name = "generust-example-project-service"
version = "0.0.1"
authors = ["Kyle Unverferth <kyle@kyleu.com>"]
edition = "2018"
description = "Application logic used by the generust-example-project server"
keywords = ["test", "noop", "pointless"]
homepage = "https://estimate.poker"
repository = "https://github.com/generust-example-project/generust-example-project"
license = "MIT"

[dependencies]
generust-example-project-core = { version = "0.0.1", path = "../core" }

anyhow = "1.0.25"
chrono = "0.4.9"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.44"
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_trace"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
