[package]
name = "generust-example-project-templates"
version = "0.0.1"
authors = ["Kyle Unverferth <kyle@kyleu.com>"]
edition = "2018"
description = "HTML templates used by the generust-example-project server"
keywords = ["test", "noop", "pointless"]
homepage = "https://estimate.poker"
repository = "https://github.com/generust-example-project/generust-example-project"
license = "MIT"

[dependencies]
generust-example-project-core = { version = "0.0.1", path = "../core" }
generust-example-project-service = { version = "0.0.1", path = "../service" }

anyhow = "1.0.23"
maud = "0.21.0"
num_cpus = "1.11.1"
serde = { version = "1.0.102", features = ["derive"] }
uuid = { version = "0.7.4", features = ["serde", "v4", "wasm-bindgen"] }
